--- a/src/css/style.css
+++ b/src/css/style.css
@@ -133,12 +133,11 @@
   --color-background: #171a1c;
 }
 
-:root {
-  font-family: "Space Grotesk Variable";
-}
-
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
+  font-family: "Space Grotesk", sans-serif;
 }
 
 html {
@@ -183,21 +182,73 @@ main {
 .settingsBtn {
   position: absolute;
   top: 1rem;
-  right: 1rem;
-  height: 2rem;
-  width: 2rem;
+  left: 1rem;
   cursor: pointer;
   z-index: 95;
-  background-color: var(--color-background);
-  border-radius: 1rem;
+  width: 48px;
+  height: 48px;
+  overflow: hidden;
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
 }
-.settingsBtn svg {
-  width: 2rem;
-  height: 2rem;
-  padding: 6px;
-  border-radius: 1rem;
-  transition: 0.6s ease-out;
+.settingsBtn button {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  outline: none;
+  border: 0;
+  vertical-align: middle;
+  text-decoration: none;
+  background: transparent;
+  padding: 0;
+  font-size: inherit;
+  font-family: inherit;
 }
-.settingsBtn:hover svg {
-  rotate: 45deg;
+.settingsBtn button.learn-more {
+  width: 12rem;
+  height: auto;
+}
+.settingsBtn button.learn-more .circle {
+  position: relative;
+  display: block;
+  width: 3rem;
+  height: 3rem;
+  margin: 0;
+  background: var(--color-background);
+  border-radius: 1.625rem;
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+}
+.settingsBtn button.learn-more .circle .icon {
+  position: absolute;
+  top: 12px;
+  left: 12px;
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+}
+.settingsBtn button.learn-more .button-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin-left: 1.85rem;
+  padding: 0.75rem 0;
+  color: var(--gray-contrast);
+  font-weight: 700;
+  line-height: 1.6;
+  text-align: center;
+  text-transform: uppercase;
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  opacity: 1;
+}
+.settingsBtn button.learn-more:hover .circle {
+  width: 100%;
+  background-color: var(--blue-2);
+}
+.settingsBtn button.learn-more:hover .circle .icon {
+  transform: rotate(45deg);
+}
+.settingsBtn button.learn-more:hover .button-text {
+  color: var(--gray-contrast);
+}
+.settingsBtn:hover {
+  width: 192px;
 }/*# sourceMappingURL=style.css.map */
