--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,12 +5,11 @@
 // go in dark mode and choose color and copy accent, gray, background scale
 @import 'themes/dark_default';
 
-:root {
-    font-family: 'Space Grotesk Variable';
-}
-
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
+    font-family: 'Space Grotesk', sans-serif;
 }
 
 html {
@@ -58,26 +57,90 @@ main {
 .settingsBtn {
     position: absolute;
     top: 1rem;
-    right: 1rem;
-    height: 2rem;
-    width: 2rem;
+    left: 1rem;
     cursor: pointer;
     z-index: 95;
-    background-color: var(--color-background);
-    border-radius: 1rem;
 
-    svg {
-        $size: 2rem;
-        width: $size;
-        height: $size;
-        padding: 6px;
-        border-radius: 1rem;
-        transition: .6s ease-out;
+    width: 48px;
+    height: 48px;
+    overflow: hidden;
+
+    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+
+
+    button {
+        position: relative;
+        display: inline-block;
+        cursor: pointer;
+        outline: none;
+        border: 0;
+        vertical-align: middle;
+        text-decoration: none;
+        background: transparent;
+        padding: 0;
+        font-size: inherit;
+        font-family: inherit;
+
+
+
+        &.learn-more {
+            width: 12rem;
+            height: auto;
+
+            .circle {
+                position: relative;
+                display: block;
+                width: 3rem;
+                height: 3rem;
+                margin: 0;
+                background: var(--color-background);
+                border-radius: 1.625rem;
+                transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+
+                .icon {
+                    position: absolute;
+                    top: 12px;
+                    left: 12px;
+                    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+                }
+            }
+
+            .button-text {
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                margin-left: 1.85rem;
+                padding: 0.75rem 0;
+                color: var(--gray-contrast);
+                font-weight: 700;
+                line-height: 1.6;
+                text-align: center;
+                text-transform: uppercase;
+                transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+                opacity: 1;
+            }
+
+            &:hover {
+                .circle {
+                    width: 100%;
+                    background-color: var(--blue-2);
+
+                    .icon {
+                        transform: rotate(45deg);
+                    }
+                }
+
+                .button-text {
+                    color: var(--gray-contrast);
+                    // opacity: 1;
+                }
+            }
+        }
     }
 
     &:hover {
-        svg {
-            rotate: 45deg;
-        }
+        width: 192px;
     }
 }
