--- a/src/css/style.css
+++ b/src/css/style.css
@@ -251,4 +251,100 @@ main {
 }
 .settingsBtn:hover {
   width: 192px;
+}
+
+.googleService {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  z-index: 95;
+  justify-content: flex-end;
+  text-align: right;
+}
+.googleService__btn {
+  cursor: pointer;
+  background: none;
+  border: none;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 1.625rem;
+  border: 3px solid var(--color-background);
+  overflow: hidden;
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+}
+.googleService__btn:hover {
+  transform: rotate(-15deg) scale(1.1);
+}
+.googleService__btn img {
+  width: 100%;
+  height: 100%;
+}
+.googleService__card {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 400px;
+  height: 600px;
+  background-color: var(--color-background);
+  border-radius: 1.625rem;
+  overflow-x: hidden;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+}
+.googleService__card .title {
+  display: flex;
+  justify-content: space-between;
+  margin: 1rem 1.625rem;
+}
+.googleService__card .title svg {
+  cursor: pointer;
+  padding: 3px;
+  border-radius: 100%;
+  background-color: var(--blue-4);
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+}
+.googleService__card .title svg:hover {
+  background-color: var(--blue-5);
+  transform: rotate(15deg);
+}
+.googleService__card hr {
+  border: 1px solid var(--gray-3);
+}
+.googleService__card .serviceLink {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1rem;
+  padding: 1rem 1.625rem;
+}
+.googleService__card .serviceLink a {
+  text-align: center;
+  padding: 10px;
+  color: var(--gray-contrast);
+  text-decoration: none;
+  border-radius: 6px;
+  overflow: hidden;
+  transition: all 0.35s cubic-bezier(0.65, 0, 0.076, 1);
+}
+.googleService__card .serviceLink a span {
+  height: 35px;
+  width: 35px;
+  font-size: 35px;
+  color: var(--blue-11);
+}
+.googleService__card .serviceLink a p {
+  font-size: 16px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.googleService__card .serviceLink a:hover {
+  background-color: var(--blue-4);
+  transform: translate(0, -5px);
+}
+
+.ccenter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }/*# sourceMappingURL=style.css.map */
