--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -166,6 +166,7 @@ main {
 
         overflow: hidden;
         transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+        opacity: 1;
 
         &:hover {
             transform: rotate(-15deg) scale(1.1);
@@ -175,9 +176,13 @@ main {
             width: 100%;
             height: 100%;
         }
+
+        &.hide {
+            opacity: 0;
+        }
     }
 
-    &__card{
+    &__card {
         position: absolute;
         top: 0;
         right: 0;
@@ -185,22 +190,67 @@ main {
         width: 400px;
         height: 600px;
         background-color: var(--color-background);
+        border: 10px solid var(--blue-2);
         border-radius: 1.625rem;
 
         overflow-x: hidden;
         overflow-y: auto;
 
-        display: flex;
+        // display: flex;
+        display: none;
         flex-direction: column;
 
-        .title{
+        &.active {
+            display: flex;
+            animation: gscActive 0.45s cubic-bezier(0.65, 0, 0.076, 1) forwards;
+
+            .serviceLink {
+                @for $i from 1 through 18 {
+                    a:nth-child(#{$i}) {
+                        animation: gscActive .6s cubic-bezier(0.65, 0, 0.076, 1) forwards;
+                        animation-delay: #{($i * 0.02)}s; // 50ms entre chaque
+                    }
+                }
+            }
+        }
+
+        &.hide {
+            display: flex;
+            animation: gscHide 0.45s cubic-bezier(0.65, 0, 0.076, 1) forwards;
+        }
+
+        @keyframes gscActive {
+            0% {
+                transform: translateX(100%);
+                opacity: 0;
+            }
+
+            100% {
+                transform: translateX(0);
+                opacity: 1;
+            }
+        }
+
+        @keyframes gscHide {
+            0% {
+                transform: translateX(0);
+                opacity: 1;
+            }
+
+            100% {
+                transform: translateX(100%);
+                opacity: 0;
+            }
+        }
+
+        .title {
             display: flex;
             justify-content: space-between;
             // align-items: center;
 
             margin: 1rem 1.625rem;
 
-            svg{
+            svg {
                 cursor: pointer;
 
                 padding: 3px;
@@ -209,24 +259,24 @@ main {
 
                 transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
 
-                &:hover{
+                &:hover {
                     background-color: var(--blue-5);
                     transform: rotate(15deg);
                 }
             }
         }
 
-        hr{
+        hr {
             border: 1px solid var(--gray-3);
         }
 
-        .serviceLink{
+        .serviceLink {
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
             gap: 1rem;
             padding: 1rem 1.625rem;
 
-            a{
+            a {
                 // background-color: red;
                 text-align: center;
                 padding: 10px;
@@ -235,8 +285,9 @@ main {
                 border-radius: 6px;
                 overflow: hidden;
                 transition: all 0.35s cubic-bezier(0.65, 0, 0.076, 1);
+                opacity: 0;
 
-                span{
+                span {
                     $size: 35px;
                     height: $size;
                     width: $size;
@@ -245,7 +296,7 @@ main {
                     color: var(--blue-11);
                 }
 
-                p{
+                p {
                     font-size: 16px;
 
                     // 1 line
@@ -254,7 +305,7 @@ main {
                     text-overflow: ellipsis;
                 }
 
-                &:hover{
+                &:hover {
                     background-color: var(--blue-4);
                     transform: translate(0, -5px);
                 }
@@ -268,4 +319,3 @@ main {
     justify-content: center;
     align-items: center;
 }
-
